openshift/keycloak-defaultdb.yaml
# -------------------------------------------------------------------
# 2) Keycloak Deployment (built-in H2 DB)
# -------------------------------------------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: si-keycloak
  namespace: danwinga-dev
  labels:
    app: si-keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: si-keycloak
  template:
    metadata:
      labels:
        app: si-keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:21.1.2
          command:
            - /opt/keycloak/bin/kc.sh
          args:
            - start-dev
            - --http-port=8080
            - --import-realm
            - --hostname=si-keycloak-danwinga-dev.apps.rm3.7wse.p1.openshiftapps.com
            - --hostname-strict=false
            - --hostname-strict-https=true
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: realm-volume
              mountPath: /opt/keycloak/data/import
              readOnly: true
      volumes:
        - name: realm-volume
          configMap:
            name: keycloak-realm

---
# -------------------------------------------------------------------
# 3) Service on 80 → forwards to 8080
# -------------------------------------------------------------------
apiVersion: v1
kind: Service
metadata:
  name: si-keycloak
  namespace: danwinga-dev
  labels:
    app: si-keycloak
spec:
  selector:
    app: si-keycloak
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP

---
# -------------------------------------------------------------------
# 4) OpenShift Route (edge TLS)
# -------------------------------------------------------------------
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: si-keycloak
  namespace: danwinga-dev
spec:
  host: si-keycloak-danwinga-dev.apps.rm3.7wse.p1.openshiftapps.com
  to:
    kind: Service
    name: si-keycloak
  port:
    targetPort: http
  tls:
    termination: edge
